--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "cloudinary": "^1.41.3",
     "docx": "^9.5.1",
     "dotenv": "^17.2.2",
@@ -17,6 +18,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "tmp": "^0.2.5"
   }
 }
