--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "sharp": "^0.34.4",
     "tmp": "^0.2.5"
   }
 }
